--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <img src="age calculator (1).png" width="140">
             </div>
         </a>
-        <a class="video-item" href="https://youtu.be/ybkv1U_ONAg">
+        <a class="video-item" href="https://youtu.be/EiySnepuYqM">
             <i class="fa-solid fa-solid-v fa-ellipsis-vertical"></i>
             <div class="in">
                 <div class="anth">How to make your personal soc...</div>
@@ -80,7 +80,7 @@
                 <img src="v2.png" width="140">
             </div>
         </a>
-        <a class="video-item" href="https://youtu.be/ybkv1U_ONAg">
+        <a class="video-item" href="https://youtu.be/AcD6VUOyXSs">
             <i class="fa-solid fa-solid-v fa-ellipsis-vertical"></i>
             <div class="in">
                 <div class="anth">Create a sub domain for your ...</div>
@@ -90,7 +90,7 @@
                 <img src="git.png" width="140">
             </div>
         </a>
-        <a class="video-item" href="https://youtu.be/ybkv1U_ONAg">
+        <a class="video-item" href="https://youtu.be/feo32NTorMU">
             <i class="fa-solid fa-solid-v fa-ellipsis-vertical"></i>
             <div class="in">
                 <div class="anth">HOW TO CHECK IF THE USER IS ...</div>
@@ -100,7 +100,7 @@
                 <img src="Check If User Online.png" width="140">
             </div>
         </a>
-        <a class="video-item" href="https://youtu.be/ybkv1U_ONAg">
+        <a class="video-item" href="https://youtu.be/F3hpMNqeBKA">
             <i class="fa-solid fa-solid-v fa-ellipsis-vertical"></i>
             <div class="in">
                 <div class="anth">Create Product Card Design by...</div>
@@ -110,7 +110,7 @@
                 <img src="hqdefault.jpg" width="140">
             </div>
         </a>
-        <a class="video-item" href="https://youtu.be/ybkv1U_ONAg">
+        <a class="video-item" href="https://youtu.be/Dot83vZgNxU">
             <i class="fa-solid fa-solid-v fa-ellipsis-vertical"></i>
             <div class="in">
                 <div class="anth">Create Social Media Viewer By...</div>
@@ -120,7 +120,7 @@
                 <img src="hqdefault (1).jpg" width="140">
             </div>
         </a>
-        <a class="video-item" href="https://youtu.be/ybkv1U_ONAg">
+        <a class="video-item" href="https://youtu.be/j8kd5RyN2D4">
             <i class="fa-solid fa-solid-v fa-ellipsis-vertical"></i>
             <div class="in">
                 <div class="anth">HOW TO CREATE AMOUNG US CHARA...</div>
@@ -130,7 +130,7 @@
                 <img src="hqdefault (2).jpg" width="140">
             </div>
         </a>
-        <a class="video-item" href="https://youtu.be/ybkv1U_ONAg">
+        <a class="video-item" href="https://youtu.be/1o1_gUYSKMg">
             <i class="fa-solid fa-solid-v fa-ellipsis-vertical"></i>
             <div class="in">
                 <div class="anth">HOW TO CREATE WEB EDITOR BY HTML...</div>
@@ -140,7 +140,7 @@
                 <img src="hqdefault (3).jpg" width="140">
             </div>
         </a>
-        <a class="video-item" href="https://youtu.be/ybkv1U_ONAg">
+        <a class="video-item" href="https://youtu.be/pbRGOZ3HJVA">
             <i class="fa-solid fa-solid-v fa-ellipsis-vertical"></i>
             <div class="in">
                 <div class="anth">HOW TO CREATE A LAMP BY HTML ...</div>
@@ -150,7 +150,7 @@
                 <img src="hqdefault (4).jpg" width="140">
             </div>
         </a>
-        <a class="video-item" href="https://youtu.be/ybkv1U_ONAg">
+        <a class="video-item" href="https://youtu.be/vnt_E4TZ55Y">
             <i class="fa-solid fa-solid-v fa-ellipsis-vertical"></i>
             <div class="in">
                 <div class="anth">HOW TO ADD FONT AWESOME LINK ...</div>
